@@ -1,3 +1,6 @@
+3 August 2016: Wouter
+	- use sendmsg instead of sendto for TFO.
+
 28 July 2016: Wouter
 	- Fix #806: wrong comment removed.
 
